--- a/mongo-docker-compose.yaml
+++ b/mongo-docker-compose.yaml
@@ -2,26 +2,24 @@
 # structured way to contain common docker commands
 # network config not needed, docker compose automatically creates a common network
 
-version:'3'
+version: "3"
 services:
   mongodb: #container name
     image: mongo # image container will be built from
     ports:
-      - 27017:27017 # Host:Container
+      - ["27017:27017"]
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
-      - mongo-date:data/db  
+      - mongo-date:data/db
   mongo-express:
-      image: mongo-express
-      ports:
-        8080:8081
-      environment:
-        - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-        - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-        - ME_CONFIG_MONGODB_SERVER=mongodb
+    image: mongo-express
+    ports: ["8080:8081"]
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=password
+      - ME_CONFIG_MONGODB_SERVER=mongodb
 volumes:
   mongo-data:
     driver: local
-
